--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 altgraph==0.17.5
+certifi==2026.1.4
+charset-normalizer==3.4.4
 customtkinter==5.2.2
 darkdetect==0.8.0
+idna==3.11
 packaging==26.0
 pefile==2024.8.26
 pillow==12.1.0
@@ -8,4 +11,6 @@ pyinstaller==6.18.0
 pyinstaller-hooks-contrib==2026.0
 pywin32-ctypes==0.2.3
 pywinstyles==1.8
+requests==2.32.5
 setuptools==80.10.2
+urllib3==2.6.3
